Fixing alignment of slider plot

--- a/src/components/views/PolicyModel/PolicyModel/PolicyModel.module.scss
+++ b/src/components/views/PolicyModel/PolicyModel/PolicyModel.module.scss
@@ -195,6 +195,8 @@
   .navigator {
     // min-width: 50rem;
     width: 28rem;
+    position: relative;
+    top: 6px;
 
     label {
       position: relative;
